新增迁移和升级文档